--- a/public_html/styles/rickies.css
+++ b/public_html/styles/rickies.css
@@ -573,6 +573,7 @@ section {
   padding: 0 var(--space-side-padding);
   padding-left: max(var(--space-side-padding), env(safe-area-inset-left));
   padding-right: max(var(--space-side-padding), env(safe-area-inset-right));
+  pointer-events: none;
 }
 section.navigate_with_mobile_menu {
   display: none;
@@ -585,6 +586,10 @@ section.navigate_with_mobile_menu.active {
 }
 section.navigate_with_mobile_menu h2 {
   display: none;
+}
+
+.section_group {
+  pointer-events: all;
 }
 
 .section_group--list:not(:first-of-type) {
